# rules_foreign_cc_for_jemalloc

./: .bazelrc  BUILD  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-rules_foreign_cc_for_jemalloc  bazel-testlogs
jemalloc/: BUILD  BUILD.jemalloc.bazel
jemalloc/include_unix/jemalloc/: jemalloc.h  jemalloc_macros.h  jemalloc_mangle.h  jemalloc_rename.h
jemalloc/include_unix/jemalloc/internal/: jemalloc_internal_defs.h  public_namespace.h
jemalloc/unix_headers/jemalloc/: jemalloc_mangle_jet.h
jemalloc/unix_headers/jemalloc/internal/: jemalloc_internal_defs.h  public_unnamespace.h
patches/: BUILD.jemalloc.gen_headers.patch  BUILD.jemalloc.patch
src/: main.c  main.cpp
src/test/: BUILD.bazel  Main.cpp  jemalloc_test.cpp
toolchain/: BUILD  cc_toolchain_config_clang.bzl  cc_toolchain_config_qcc.bzl
