# load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "jemalloc_all_srcs",
    srcs = glob(["**"]),
)

filegroup(
    name = "jemalloc_headers",
    srcs = glob(["include/**/*.h"]),
)

filegroup(
    name = "jemalloc_srcs",
    srcs = [
        "src/arena.c",
        "src/background_thread.c",
        "src/base.c",
        "src/bin.c",
        "src/bitmap.c",
        "src/ckh.c",
        "src/ctl.c",
        "src/div.c",
        "src/extent_dss.c",
        "src/extent_mmap.c",
        "src/extent.c",
        "src/hash.c",
        "src/hook.c",
        "src/jemalloc_cpp.cpp",
        "src/jemalloc.c",
        "src/large.c",
        "src/log.c",
        "src/malloc_io.c",
        "src/mutex_pool.c",
        "src/mutex.c",
        "src/nstime.c",
        "src/pages.c",
        "src/prng.c",
        "src/prof.c",
        "src/rtree.c",
        "src/safety_check.c",
        "src/sc.c",
        "src/stats.c",
        "src/sz.c",
        "src/tcache.c",
        "src/test_hooks.c",
        "src/ticker.c",
        "src/tsd.c",
        "src/witness.c",
    ],
)

cc_library(
    name = "jemalloc",
    hdrs = [
        ":jemalloc_headers",
    ],
    defines = [
        "_GNU_SOURCE",
        "_REENTRANT",
    ],
    srcs = [
        ":jemalloc_srcs",
    ],
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@ddad//jemalloc:jemalloc_unix_headers",
    ],
)
